Minor css change to fix images on mobile

--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@ body {
    background-repeat: repeat;*/
 
 }
-.row > div > img { width: 100%; display: block; }
+.row > div > img { max-width: 100%; display: block; }
 
 .margintop {
     margin-top: 7.5%;
